# Solis2

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  compile_commands.json
source/: CMakeLists.txt
source/app/: CMakeLists.txt  main.cpp  main_world.cpp  main_world.hpp
source/engine/: CMakeLists.txt
source/engine/core/: CMakeLists.txt  solis_core.h  solis_core.hpp  solis_engine.cpp  solis_engine.hpp
source/engine/core/assets/: asset_class.cpp  asset_class.hpp  assets.cpp  assets.hpp
source/engine/core/base/: const.hpp  ecs.cpp  ecs.hpp  i_destroyable.hpp  i_noncopyable.hpp  memory.cpp  memory.h  memory.hpp  module.hpp  object.cpp  object.h  object.hpp  type.hpp  using.h  using.hpp
source/engine/core/data/: component.cpp  component.hpp  game_object.cpp  game_object.hpp  mesh.hpp  model.cpp  model.hpp  system.cpp  system.hpp  texture.cpp  texture.hpp
source/engine/core/events/: event_define.hpp  event_manager.cpp  event_manager.hpp  event_property.hpp  events.hpp
source/engine/core/files/: file_info.cpp  file_info.hpp  files.cpp  files.hpp
source/engine/core/graphics/: graphics.cpp  graphics.h  graphics.hpp  instance.cpp  instance.hpp  logical_device.cpp  logical_device.hpp  physical_device.cpp  physical_device.hpp  render_pass.cpp  render_pass.hpp  surface.cpp  surface.hpp  swapchain.cpp  swapchain.hpp  vma.cpp  vma.hpp
source/engine/core/graphics/buffer/: buffer.cpp  buffer.hpp  union_buffer_pool.cpp  union_buffer_pool.hpp
source/engine/core/graphics/command/: command_buffer.cpp  command_buffer.hpp  command_pool.cpp  command_pool.hpp
source/engine/core/graphics/image/: image.cpp  image.hpp  render_target.hpp
source/engine/core/graphics/pipeline/: descriptor_pool.cpp  descriptor_pool.hpp  discriptor_pool.hpp  material.cpp  material.hpp  pipeline.cpp  pipeline.hpp  pipeline_graphics.cpp  pipeline_graphics.hpp  shader.cpp  shader.hpp
source/engine/core/graphics/render_graph/: render_graph.cpp  render_graph.hpp  render_node.cpp  render_node.hpp
source/engine/core/log/: log.cpp  log.hpp
source/engine/core/math/: mat.hpp  math.hpp
source/engine/core/os/: chrono.hpp
source/engine/core/type/: type.hpp
source/engine/core/world/: component.hpp  system.hpp  world.hpp  world_base.hpp
source/engine/core/world/base/: i_renderable.hpp
source/engine/core/world/component/: camera.cpp  camera.hpp  camera_component.hpp  material.hpp  mesh.cpp  mesh.hpp  mesh_renderer.cpp  mesh_renderer.hpp  renderable.hpp  transform.hpp  transform_component.hpp
source/engine/core/world/system/: render_system.cpp  render_system.hpp  transform_system.cpp  transform_system.hpp
source/gltfs/: .gitignore  glTF-Sample-Models.rar
source/shaders/sponza/: sponza.frag  sponza.vert
test/: CMakeLists.txt
test/test_windows_stack/: CMakeLists.txt  main.cpp
